[package]
name = "Dex-Aggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.1.2", features = ["full"] }
alloy-transport-ws = "1.1.2"
anyhow = "1.0.100"
clap = "4.5.53"
futures = "0.3.31"
log = "0.4.28"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full", "sync"] }
